# rust-exercises

./: README.md
coingecko-multiple-pages/: Cargo.toml
coingecko-multiple-pages/src/: main.rs
linked-list/src/: main.rs
music-playlist/: Cargo.toml
music-playlist/src/: main.rs
news-scraper/: Cargo.toml  README.md  headlines.json
news-scraper/src/: lib.rs  main.rs
rust-journal/: Cargo.toml  rusty-journal.json  test-journal.json
rust-journal/src/: cli.rs  main.rs  tasks.rs
rust_text_adventure/: Cargo.toml  README.md
rust_text_adventure/src/: main.rs
rusty-crawler/: Cargo.toml
rusty-crawler/src/: cli.rs  crawler.rs  main.rs  parser.rs  word_cloud.rs
rusty-sol-monitor/: Cargo.toml
rusty-sol-monitor/src/: csv_writer.rs  display.rs  main.rs  metadata.rs
rusty_web_actix/: Cargo.toml  state.json
rusty_web_actix/src/: main.rs  processes.rs  state.rs
rusty_web_actix/src/to_do/: enums.rs
rusty_web_actix/src/to_do/structs/: base.rs
rusty_web_actix/src/to_do/traits/: delete.rs
rusty_web_actix/src/views/: mod.rs
rusty_web_actix/src/views/auth/: login.rs  logout.rs  mod.rs
rusty_web_actix/src/views/to_do/: create.rs  get.rs  mod.rs
telegram_teloxide/: .gitignore  Cargo.toml  README.md
telegram_teloxide/src/: main.rs
todo_app/: Cargo.toml  README.md  state.json
todo_app/src/: main.rs
todo_app/src/to_do/: enums.rs  mod.rs
todo_app/src/to_do/structs/: base.rs  done.rs  pending.rs
todo_app/src/to_do/traits/: create.rs  delete.rs  edit.rs  get.rs
treehouse/: Cargo.toml
treehouse/src/: main.rs
