[package]
name = "rusty-crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
url = "2.3"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
rayon = "1.7"
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
futures = "0.3"
