[package]
name = "rusty-sol-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.0.10"
solana-sdk = "2.0.10"
solana-transaction-status = "2.0.10"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
borsh = "0.10.3"
csv = "1.1"
colored = "2.0"
ws = "0.9"
