[package]
name = "telegram_teloxide"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
log = "0.4"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11", features = ["json"] } # For HTTP requests
serde = { version = "1.0", features = [
    "derive",
] } # For JSON serialization/deserialization
serde_json = "1.0" # For handling JSON
